--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "react-scripts": "5.0.1",
     "redux": "^4.2.1",
     "redux-logger": "^3.0.6",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^1.0.2",
+    "yup-password": "^0.2.2"
   },
   "scripts": {
     "start": "react-scripts start",
