--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -7,11 +7,13 @@
   "scripts": {
     "lint": "eslint \"**/*.ts*\""
   },
+  "dependencies": {
+    "react": "^18.2.0"
+  },
   "devDependencies": {
     "@types/react": "^18.0.22",
     "eslint": "^7.32.0",
     "eslint-config-custom": "*",
-    "react": "^18.2.0",
     "tsconfig": "*",
     "typescript": "^4.5.2"
   }
