--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -8,7 +8,14 @@
     "lint": "eslint \"**/*.ts*\""
   },
   "dependencies": {
-    "react": "^18.2.0"
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@hookform/resolvers": "^2.9.11",
+    "@mui/lab": "^5.0.0-alpha.123",
+    "@mui/material": "^5.11.13",
+    "react": "^18.2.0",
+    "react-hook-form": "^7.43.7",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@types/react": "^18.0.22",
