--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
   "engines": {
     "node": ">=14.0.0"
   },
-  "dependencies": {},
+  "dependencies": {
+    "axios": "^1.4.0",
+    "ui": "^0.2.4"
+  },
   "packageManager": "yarn@1.22.19"
 }
