--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "node": ">=14.0.0"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.4.0",
+    "react-redux": "^8.0.5",
     "ui": "^0.2.4"
   },
   "packageManager": "yarn@1.22.19"
